  * Remove some cruft from the source package.
  * Make zoom-in.png global rather than distribution-specific.
  * Remove intltool-* on distclean; configure creates them.
  * Move liveinstaller.glade to a better place in the source package, and
    rename it to ubiquity.glade.
  * Update debian/copyright regarding the status of Ubiquity with respect to
    the original Guadalinex work.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 31 Jul 2006 23:05:34 +0100

ubiquity (1.1.4) edgy; urgency=low

  * Write out the resume partition as a UUID if possible.
  * Always set mirror/country to the country selected on the timezone page,
    regardless of what localechooser does thereafter (closes: Malone
    #40107).
  * Adapt apt-setup wrapper to new apt-setup, which calls choose-mirror
    itself.
  * Tell localechooser to reprocess preseeding every time we run it.
  * debian/rules install target depends on build (closes: Malone #54503).
  * Automatic update of included source packages: apt-setup
    1:0.11ubuntu3, base-installer 1.63ubuntu3, partman-target 42ubuntu2.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 31 Jul 2006 15:34:40 +0100

ubiquity (1.1.3) edgy; urgency=low

  * Fix typoed variable name while raising InstallStepError.
  * Rename Partman component to PartmanAuto to allow for a future all-in-one
    partman component
    (https://launchpad.net/distros/ubuntu/+spec/ubiquity-advanced-partitioner).
  * When an error occurs with the install progress bar up, only return to
    autopartitioning if the partitioner is still running.
  * Turn DebconfInstallProgress upside-down so that the main process handles
    apt installation and the subprocess handles the translation of apt
    status messages into debconf protocol messages, rather than the other
    way round. The previous approach resulted in exceptions from apt ending
    up in the wrong process.
  * Silence apt errors while installing language packs, since we ignore them
    anyway.