@@ -1,1 +1,1 @@
-glade/pixmaps/guadalinex usr/share/ubiquity/glade/pixmaps
+pixmaps/guadalinex usr/share/ubiquity/pixmaps
