@@ -1,1 +1,1 @@
-glade/pixmaps/ubuntu usr/share/ubiquity/glade/pixmaps
+pixmaps/ubuntu usr/share/ubiquity/pixmaps
